[gd_scene load_steps=6 format=3 uid="uid://b7v0wbgt45klj"]

[ext_resource type="Texture2D" uid="uid://i3a5j7dcksyf" path="res://Themes/background.tres" id="1_kfad0"]
[ext_resource type="Script" path="res://menu.gd" id="1_md5wb"]
[ext_resource type="Theme" uid="uid://dqiic5vew0v7e" path="res://Themes/BlueUI.tres" id="2_uroow"]
[ext_resource type="Texture2D" uid="uid://yb6nvsv56xom" path="res://Tilesets/UI_ELEMENTS/mute.png" id="4_31p2x"]
[ext_resource type="PackedScene" uid="uid://dcu3xdosp8tqx" path="res://credits.tscn" id="5_1oop1"]

[node name="Menu" type="CanvasLayer"]
script = ExtResource("1_md5wb")

[node name="TextureRect" type="TextureRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_kfad0")

[node name="MainMenu" type="Button" parent="."]
offset_left = 595.0
offset_top = 37.0
offset_right = 739.0
offset_bottom = 71.0
theme = ExtResource("2_uroow")
text = "Return to Title"

[node name="ChangeAvatar" type="Button" parent="."]
offset_left = 110.0
offset_top = 235.0
offset_right = 252.0
offset_bottom = 269.0
theme = ExtResource("2_uroow")
text = "Change Avatar"

[node name="Save" type="Button" parent="."]
offset_left = 315.0
offset_top = 235.0
offset_right = 457.0
offset_bottom = 269.0
theme = ExtResource("2_uroow")
text = "Save"

[node name="Credits" type="Button" parent="."]
offset_left = 530.0
offset_top = 235.0
offset_right = 672.0
offset_bottom = 269.0
theme = ExtResource("2_uroow")
text = "Credits"

[node name="ToGame" type="Button" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -75.0
offset_top = 109.0
offset_right = 67.0
offset_bottom = 143.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_uroow")
text = "Back to Game"

[node name="SoundControl" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = 81.0
offset_top = 112.0
offset_right = 681.0
offset_bottom = 182.0

[node name="HSlider" type="HSlider" parent="SoundControl"]
layout_mode = 0
offset_left = 199.0
offset_top = 23.0
offset_right = 599.0
offset_bottom = 48.0
theme = ExtResource("2_uroow")
value = 50.0

[node name="Sound" type="Label" parent="SoundControl"]
layout_mode = 0
offset_left = 15.0
offset_top = 14.0
offset_right = 105.0
offset_bottom = 61.0
theme = ExtResource("2_uroow")
theme_override_font_sizes/font_size = 42
text = "Sound"

[node name="Mute" type="Button" parent="SoundControl"]
layout_mode = 0
offset_left = 114.0
offset_right = 186.0
offset_bottom = 72.0
toggle_mode = true
icon = ExtResource("4_31p2x")
flat = true

[node name="Credits2" parent="." instance=ExtResource("5_1oop1")]
visible = false

[connection signal="pressed" from="MainMenu" to="." method="_on_main_menu_pressed"]
[connection signal="pressed" from="ChangeAvatar" to="." method="_on_change_avatar_pressed"]
[connection signal="pressed" from="Credits" to="." method="_on_credits_pressed"]
[connection signal="pressed" from="ToGame" to="." method="_on_to_game_pressed"]
[connection signal="value_changed" from="SoundControl/HSlider" to="." method="_on_h_slider_value_changed"]
[connection signal="toggled" from="SoundControl/Mute" to="." method="_on_mute_toggled"]
